--- a/css/main.css
+++ b/css/main.css
@@ -154,6 +154,25 @@ h5,
 h6 {
   font-weight: 500; }
 
+  .social-link {
+    width: 30px;
+    height: 30px;
+    border: 1px solid #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #666;
+    border-radius: 50%;
+    transition: all 0.3s;
+    font-size: 0.9rem;
+  }
+  
+  .social-link:hover,
+  .social-link:focus {
+    background: #ddd;
+    text-decoration: none;
+    color: #555;
+  }
 .card {
   border: none;
   border-radius: 0; }
