--- a/css/main.css
+++ b/css/main.css
@@ -15785,8 +15785,7 @@ input[type="number"] {
 /*>>>>>>>> Sliders <<<<<<<<<*/
 /*===== Brand Slider ======*/
 .sb-slick-slider {
-  position: relative;
-  left: 1750px;}
+  align: center;}
   .sb-slick-slider .slick-dots {
     display: -webkit-box;
     display: -ms-flexbox;
